# tas/deprecated_routes.py
@@ -54,69 +54,3 @@ def _add_deprecation_headers(response, successor_path):
             pass
 
     return response
-
-
-@deprecated_policy_bp.route("/v0/store", methods=["POST"])
-def store_policy_deprecated():
-    logger.warning(
-        "DEPRECATED: /policy/v0/store called from %s. "
-        "Use /management/policy/v0/store instead.",
-        request.remote_addr,
-    )
-    result = store_policy()
-    if isinstance(result, tuple):
-        response = make_response(result[0], result[1])
-    else:
-        response = make_response(result)
-    return _add_deprecation_headers(response, "/management/policy/v0/store")
-
-
-@deprecated_policy_bp.route("/v0/get/<policy_key>", methods=["GET"])
-def get_policy_deprecated(policy_key):
-    logger.warning(
-        "DEPRECATED: /policy/v0/get/%s called from %s. "
-        "Use /management/policy/v0/get/%s instead.",
-        policy_key,
-        request.remote_addr,
-        policy_key,
-    )
-    result = get_policy(policy_key)
-    if isinstance(result, tuple):
-        response = make_response(result[0], result[1])
-    else:
-        response = make_response(result)
-    return _add_deprecation_headers(response, f"/management/policy/v0/get/{policy_key}")
-
-
-@deprecated_policy_bp.route("/v0/list", methods=["GET"])
-def list_policies_deprecated():
-    logger.warning(
-        "DEPRECATED: /policy/v0/list called from %s. "
-        "Use /management/policy/v0/list instead.",
-        request.remote_addr,
-    )
-    result = list_policies()
-    if isinstance(result, tuple):
-        response = make_response(result[0], result[1])
-    else:
-        response = make_response(result)
-    return _add_deprecation_headers(response, "/management/policy/v0/list")
-
-
-@deprecated_policy_bp.route("/v0/delete/<policy_key>", methods=["DELETE"])
-def delete_policy_deprecated(policy_key):
-    logger.warning(
-        "DEPRECATED: /policy/v0/delete/%s called from %s. "
-        "Use /management/policy/v0/delete/%s instead.",
-        policy_key,
-        request.remote_addr,
-        policy_key,
-    )
-    result = delete_policy(policy_key)
-    if isinstance(result, tuple):
-        response = make_response(result[0], result[1])
-    else:
-        response = make_response(result)
-    return _add_deprecation_headers(
-        response, f"/management/policy/v0/delete/{policy_key}"
-    )
